Layout Bug fix on mobile and Ig links added

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -25,7 +25,7 @@
         }
 
         @media (max-width: 499px) {
-            height: 425px;
+            height: 495px;
         }
     }
 
