--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -82,7 +82,7 @@
     }
 }
 
-@media screen and (max-width: 695px) {
+@media screen and (max-width: 775px) {
     .site-header-inner {
         position: relative;
         display: flex;
